2007-04-18  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* debian/control:

	Added dependency cvs | subversion to the Debian package


2007-04-18  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/plugins/graphs/__init__.py:

	Check whether ploticus and gnuplot are installed before using them. If
	one of them is not present the graph that requires it is skipped.
	Fixes bug #259. 

2007-04-17  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/plugins/generations/generations.py:

	Create graphs in generations plugin. 

2007-04-17  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* setup.py:
	* pycvsanaly/plugins/generations/generations.py:
	* pycvsanaly/plugins/generations/__init__.py:

	Add generations plugin. 

2007-04-17  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:

	Make cvs work with absolute paths. 

2007-04-15  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/plugins/graphs/__init__.py:
	* pycvsanaly/plugins/graphs/graph_evolution.py:

	Add evolution graphs.

2007-04-13  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/plugins/graphs/__init__.py:
	* pycvsanaly/plugins/__init__.py:
	* pycvsanaly/main.py:

	Add support for plugin specific command line options. Add --output-dir
	option in graphs plugin. Fixes bug #257.

2007-04-12  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/plugins/graphs/__init__.py:

	s/Graphs/graphs. Fixes bug #262.

2007-04-12  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* setup.py:
	* pycvsanaly/main.py:

	Add --version command line option. Fix version number. Fixes bug #261.

2007-04-12  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* setup.py:
	* pycvsanaly/plugins/graphs/__init__.py:
	* pycvsanaly/plugins/__init__.py:
	* pycvsanaly/main.py:

	Move cvsplugins to pycvsanaly/plugins. Rework plugin system. Fixes
	bugs #232 and #240. 

2007-04-11  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
